[package]
name = "random_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/io.rs"
crate-type = ["cdylib"]

[dependencies]
words-count = "0.1.3"
postcard = { version = "1.0.2", features = ["alloc"] }
serde = "1.*"

#try_csl = { path = "try-csl" }