[package]
name = "random_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "random_examples"
path = "src/main.rs"

[lib]
path = "src/io.rs"
crate-type = ["cdylib"]

[dependencies]
words-count = "0.1.3"
postcard = { version = "1.0.2", features = ["alloc"] }
serde = "1.*"

csl-ffi = { path = "../../conifer-sdk/conifer-standard-library/csl-ffi", default-features = false, optional = true}
csf-ffi = { path = "../../conifer-sdk/conifer-standard-framework/csf-ffi", default-features = false, optional = true}

[features]
default = ["csl_static"]
csl-ffi = ["dep:csl-ffi"]
csf-ffi = ["dep:csf-ffi"]
csl_static = ["csl-ffi/static", "csl-ffi"]
csl_dynamic = ["csl-ffi/dynamic", "csl_static"] # we also add static along with dynamic since,
                                                # some functions don't work with dynamic
csf_static__csl_static = ["csf-ffi/static", "csl_static", "csf-ffi"]
csf_dynamic__csl_static = ["csf-ffi/dynamic", "csl_static", "csf-ffi"]
# We're going to test CSF with only Static version of CSL, as the dynamic version is pretty useless
