[package]
name = "random_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "random_examples"
path = "src/main.rs"

[lib]
path = "src/examples.rs"
crate-type = ["cdylib"]

[dependencies]
words-count = "0.1.3"
postcard = { version = "1.0.2", features = ["alloc"] }
serde = "1.*"

csl-ffi = { path = "../../conifer-sdk/conifer-standard-library/csl-ffi", default-features = false, optional = true}

[features]
csl-ffi = ["dep:csl-ffi"]
csl_static = ["csl-ffi/static", "csl-ffi"]
decorate_string_atom1 = ["csl_static"]
decorate_string_atom2 = ["csl_static"]

decorate_string = ["decorate_string_atom1", "decorate_string_atom2"]
multi_app_thread = ["csl_static"]
default = ["decorate_string"]
